# searchat

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.example.md  CLAUDE.md  CONTRIBUTING.md  Dprojectssearchatsrcsearchatwebstaticcsscomponents.css  LICENSE  MANIFEST.in  README.md  benchmark_optimizations.py  benchmark_projection_pushdown.py  coverage.xml  pyproject.toml  pytest.ini  requirements.txt  setup.py  v2-migration-plan.md
.campaign/v2-migration/: campaign.toml
.campaign/v2-migration/progress/: terminal-A.md  terminal-B.md  terminal-C.md  terminal-D.md  terminal-E.md  terminal-F.md  terminal-G.md  terminal-H.md
.campaign/v2-migration/scripts/: launch-wave-1.sh  launch-wave-2.sh  launch-wave-3.sh  launch-wave-4.sh  launch-wave-5.sh  launch-wave-6.sh  launch-wave-7.sh  terminal-A-resume.sh  terminal-A.sh  terminal-B.sh  terminal-C.sh  terminal-D.sh  terminal-E.sh  terminal-F.sh  terminal-G.sh  terminal-H.sh
.github/workflows/: ci.yml  publish.yml
70/1d7d596a37/: metadata.json
70/1d7d596a37/0/: content_hash.txt  context.md  full.jsonl  metadata.json  prompt.txt
benchmarks/: README.md  bench_duckdb_query_performance.py  benchmark_predicate_pushdown.py
config/: settings.default.toml  settings.toml.example
docs/: GPU_SETUP.md  api-reference.md  architecture.md  features.md  infographics.html  mcp-setup.md  release.md  snapshots.md  terminal-launching.md
docs/infographics/: README.md  backup-restore-flow.html  file-watching-indexing.html  multi-agent-connectors.html  rag-chat-pipeline.html
docs/infographics/shared/: navigation.css  navigation.js
examples/: README.md  advanced_search.py  api_integration.py  basic_search.py  batch_operations.py  custom_indexing.py
examples/config_examples/: advanced_config.env  basic_config.env  isolated_variants.toml  multi_user.toml
frontend/: build.mjs  package-lock.json  package.json  tsconfig.json
scripts/: index-missing  setup-index  terminal_launch_smoketest.py
src/searchat/: __init__.py  gpu_check.py  models.py  web_api.py
src/searchat/api/: __init__.py  app.py  contracts.py  dataset_access.py  dependencies.py  duckdb_store.py  readiness.py  state.py  templates.py  utils.py  warmup.py
src/searchat/cli/: __init__.py  ci_check_cmd.py  contradictions_cmd.py  distill_cmd.py  download_model.py  expertise_cmd.py  extract.py  health_cmd.py  knowledge_graph_cmd.py  main.py  migrate_storage.py  onboard.py  prune.py  setup_index.py  validate_cmd.py
src/searchat/config/: __init__.py  constants.py  path_resolver.py  settings.default.toml  settings.py  user_config_writer.py
src/searchat/contracts/: __init__.py  agent.py  errors.py  indexing.py  retrieval.py  similarity.py  storage.py
src/searchat/core/: __init__.py  code_extractor.py  conversation_filter.py  filters.py  indexer.py  logging_config.py  progressive_fallback.py  query_classifier.py  query_parser.py  result_merger.py  search_engine.py  unified_indexer.py  unified_search.py  watcher.py
src/searchat/daemon/: __init__.py  ghost.py  notify.py
src/searchat/expertise/: __init__.py  embeddings.py  extractor.py  llm_extractor.py  models.py  pipeline.py  primer.py  staleness.py  store.py
src/searchat/knowledge_graph/: __init__.py  detector.py  models.py  provenance.py  resolver.py  store.py
src/searchat/llm/: __init__.py  embedded_provider.py  model_downloader.py  model_presets.py
src/searchat/mcp/: __init__.py  contracts.py  server.py  (+1 more)
tests/: README.md  __init__.py  conftest.py  test_chunking.py  test_incremental.py  test_indexer.py  test_query_parser.py  test_terminal_basic.py  test_terminal_launch.py
tests/acceptance/: __init__.py  test_api_contract.py  test_cli_contract.py  test_config_compatibility.py  test_knowledge_integrity.py  test_mcp_contract.py  test_ops_readiness.py  test_search_quality.py  test_storage_compatibility.py  test_ui_smoke_flows.py
tests/api/: __init__.py  test_agent_config.py  test_analytics_routes.py  test_app_dependencies_and_status.py  test_bookmarks_routes.py  test_chat_rag_routes.py  test_code_extraction.py  test_code_highlight.py  test_code_search_routes.py  test_code_symbol_endpoints.py  test_conversations_routes.py  test_dashboards_routes.py  test_docs_summary.py  test_duckdb_store_more_coverage.py  test_expertise_api.py  test_expertise_staleness_api.py  test_export.py  test_export_new_formats.py  test_fragment_routes.py  test_health_routes.py  test_indexing_admin_routes.py  test_knowledge_graph_api.py  test_patterns_routes.py  test_queries_routes.py  test_readiness_dependencies_duckdb_store.py  test_search_enhancements.py  test_search_routes.py  test_similarity.py  test_snapshot_read_only_mode.py  test_stats_backup_routes.py  test_utils.py
tests/e2e/: __init__.py
tests/fixtures/: long_conversation.json  sample_conversation.json
tests/integration/: __init__.py  test_dual_writer.py  test_migration_v1_to_v2.py  test_unified_indexer.py
tests/ui/: test_analytics_ui_contract.py  test_chat_ui_contract.py  test_code_ui_contract.py  test_conversation_ui_contract.py  test_dashboards_ui_contract.py  test_manage_ui_contract.py  test_search_ui_contract.py  test_template_ui_contract.py
tests/unit/: __init__.py  test_chat_store_contract.py  test_cli_ci_check.py  test_cli_contradictions.py  test_cli_expertise.py  test_cli_health.py  test_cli_knowledge_graph.py  test_cli_main_dispatch.py  test_cli_prune.py  test_cli_validate_release.py  test_cli_validate_storage.py  test_dependencies_coverage.py  test_detector_nli.py  test_expertise_embeddings.py  test_expertise_extractor.py  test_expertise_llm_extractor.py  test_expertise_models.py  test_expertise_pipeline.py  test_expertise_primer.py  test_expertise_staleness.py  test_expertise_store.py  test_extractor_coverage.py  test_gpu_check.py  test_knowledge_graph_detector.py  test_knowledge_graph_provenance.py  test_knowledge_graph_resolver.py  test_knowledge_graph_store.py  test_mcp_expertise_tools.py  test_mcp_server.py  test_mcp_tools_core.py  test_package_init.py  test_pipeline_coverage.py  test_primer_kg_integration.py  test_web_expertise.py
utils/: vibe_converter.py
(+242 files in other folders)
