[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "searchat"
version = "0.2.0"
description = "Semantic search for AI coding agents - search Claude Code and Mistral Vibe conversations"
authors = [{name = "Searchat Contributors"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "duckdb==1.4.3",
    "pyarrow>=14.0.0",
    "faiss-cpu>=1.7.4",
    "sentence-transformers>=2.3.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "rich>=13.0.0",
    "tomli>=2.0.1",
    "numpy<2",
    "pandas>=2.0.0",
    "python-dotenv>=1.0.0",
    "watchdog>=3.0.0",
    "rank-bm25>=0.2.2",
    "litellm>=1.81.3",
    "pygments>=2.17.0",
    "reportlab>=4.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.11.0",
    "httpx>=0.24.0",  # For testing FastAPI
    "build>=1.2.2",
]

# GPU acceleration (NVIDIA CUDA)
# Note: PyTorch CUDA wheels are not on PyPI. Install manually BEFORE installing searchat:
#   uv pip install torch --index-url https://download.pytorch.org/whl/cu124
#   uv pip install -e ".[gpu]"
gpu = [
    "faiss-gpu>=1.7.2",  # GPU-accelerated FAISS (replaces faiss-cpu)
]

[project.scripts]
searchat = "searchat.cli:main"
searchat-web = "searchat.api.app:main"

[project.entry-points."searchat.connectors"]
claude = "searchat.core.connectors.claude:ClaudeConnector"
vibe = "searchat.core.connectors.vibe:VibeConnector"
opencode = "searchat.core.connectors.opencode:OpenCodeConnector"
codex = "searchat.core.connectors.codex:CodexConnector"
gemini = "searchat.core.connectors.gemini:GeminiCLIConnector"

[tool.hatch.build.targets.wheel]
packages = ["src/searchat"]
include = [
    "src/searchat/py.typed",
    "src/searchat/config/*.toml",
    "src/searchat/web/index.html",
    "src/searchat/web/static/**",
]

[tool.hatch.build.targets.sdist]
include = [
    "src/**",
    "tests/**",
    "docs/**",
    ".docs/**",
    "README.md",
    "LICENSE",
    "pyproject.toml",
    "CHANGELOG.md",
]

# Pytest configuration moved to pytest.ini for better organization

[tool.coverage.run]
source = ["src/searchat"]
omit = [
    "*/tests/*",
    "*/__main__.py",
    "*/setup.py",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "httpx>=0.24.0",
    "build>=1.2.2",
]
